# swagger.yaml
@@ -234,6 +234,35 @@ paths:
           description: "Conflict"
         500:
           description: "Server Error"
+  /users/changepassword:
+    put:
+      tags:
+        - User
+      summary: Change User Password (Auth Route)
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              newPassword:
+                type: string
+                description: new password
+              oldPassword:
+                type: string
+                description: user's old password
+      responses:
+        200:
+          description: "Ok"
+        404:
+          description: "Not Found"
+        400:
+          description: "Bad Request"
+        409:
+          description: "Conflict"
+
+      deprecated: false
 
   #[POST] auth
   /story/create:
